// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UIButton should display the loading correctly 1`] = `
<button
  class="border-gray-300 text-gray-900 bg-gray-300 disabled:bg-gray-300 ring-gray-600 hover:bg-gray-400 hover:border-gray-400 border px-3.5 py-2 pointer-events-none focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="loader"
    >
      
      <transition-stub>
        <div
          class="ui-spinner-loader indeterminate px-4 mx-auto"
          role="progressbar"
        >
          <svg
            class="spinner-draw stroke-current"
            focusable="false"
            preserveAspectRatio="xMidYMid"
            style="width: 25px; height: 25px;"
            viewBox="0 0 25 25"
          >
            <circle
              class="spinner-circle stroke-current"
              cx="50%"
              cy="50%"
              r="11.5"
              stroke-width="2px"
              style="stroke-dashoffset: 72.25663103256524px; stroke-dasharray: 72.25663103256524px; --spinner-start-value: 68.64379948093698; --spinner-end-value: 14.451326206513048;"
            />
          </svg>
          <!--v-if-->
        </div>
      </transition-stub>
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 1`] = `
<button
  class="border-brand-400 text-white bg-brand-400 ring-brand-700 hover:bg-brand-500 hover:border-brand-500 border px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 2`] = `
<button
  class="border-brand-400 text-white bg-brand-400 ring-brand-700 hover:bg-brand-500 hover:border-brand-500 border px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 3`] = `
<button
  class="border-brand-400 text-white bg-brand-400 ring-brand-700 hover:bg-brand-500 hover:border-brand-500 border px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 4`] = `
<button
  class="border-brand-400 text-white bg-brand-400 ring-brand-700 hover:bg-brand-500 hover:border-brand-500 border px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 5`] = `
<button
  class="border-brand-400 text-white bg-brand-400 ring-brand-700 hover:bg-brand-500 hover:border-brand-500 border px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 6`] = `
<button
  class="border-brand-400 text-white bg-brand-400 ring-brand-700 hover:bg-brand-500 hover:border-brand-500 border px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 7`] = `
<button
  class="border-brand-400 text-white bg-brand-400 ring-brand-700 hover:bg-brand-500 hover:border-brand-500 border px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 8`] = `
<button
  class="text-brand-600 shadow-sm border-brand-400 disabled:bg-gray-200 disabled:shadow-none ring-brand-400 hover:text-white hover:bg-brand-400 hover:border-brand-400 border focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 9`] = `
<button
  class="text-brand-600 shadow-sm border-brand-400 disabled:bg-gray-200 disabled:shadow-none ring-brand-400 hover:text-white hover:bg-brand-400 hover:border-brand-400 border focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 10`] = `
<button
  class="text-brand-600 shadow-sm border-brand-400 disabled:bg-gray-200 disabled:shadow-none ring-brand-400 hover:text-white hover:bg-brand-400 hover:border-brand-400 border focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 11`] = `
<button
  class="text-brand-600 shadow-sm border-brand-400 disabled:bg-gray-200 disabled:shadow-none ring-brand-400 hover:text-white hover:bg-brand-400 hover:border-brand-400 border focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 12`] = `
<button
  class="text-brand-600 shadow-sm border-brand-400 disabled:bg-gray-200 disabled:shadow-none ring-brand-400 hover:text-white hover:bg-brand-400 hover:border-brand-400 border focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 13`] = `
<button
  class="text-brand-600 shadow-sm border-brand-400 disabled:bg-gray-200 disabled:shadow-none ring-brand-400 hover:text-white hover:bg-brand-400 hover:border-brand-400 border focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 14`] = `
<button
  class="text-brand-600 shadow-sm border-brand-400 disabled:bg-gray-200 disabled:shadow-none ring-brand-400 hover:text-white hover:bg-brand-400 hover:border-brand-400 border focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 15`] = `
<button
  class="text-brand-600 disabled:bg-gray-300 ring-brand-300 hover:bg-brand-200 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 16`] = `
<button
  class="text-brand-600 disabled:bg-gray-300 ring-brand-300 hover:bg-brand-200 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 17`] = `
<button
  class="text-brand-600 disabled:bg-gray-300 ring-brand-300 hover:bg-brand-200 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 18`] = `
<button
  class="text-brand-600 disabled:bg-gray-300 ring-brand-300 hover:bg-brand-200 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 19`] = `
<button
  class="text-brand-600 disabled:bg-gray-300 ring-brand-300 hover:bg-brand-200 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 20`] = `
<button
  class="text-brand-600 disabled:bg-gray-300 ring-brand-300 hover:bg-brand-200 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;

exports[`UIButton should render correctly 21`] = `
<button
  class="text-brand-600 disabled:bg-gray-300 ring-brand-300 hover:bg-brand-200 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed"
  type="button"
>
  <transition-stub>
    
    <span
      class="label"
    >
      
      click me!
      
    </span>
    
  </transition-stub>
</button>
`;
